--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./pages/reg/reg.css">
-    <link rel="stylesheet" href="./pages/login/login.css">
+    <link rel="stylesheet" href="./features/pages/reg/reg.css">
+    <link rel="stylesheet" href="./features/pages/login/login.css">
+    <link rel="stylesheet" href="./features/pages/chat/chat.css">
+    <link rel="stylesheet" href="./features/pages/error/error.css">
     <link rel="stylesheet" href="./components/ui/loginReg/bottom.css">
     <link rel="stylesheet" href="./components/ui/loginReg/top.css">
     <link rel="stylesheet" href="./components/ui/loginReg/input.css">
-    <link rel="stylesheet" href="./pages/chat/chat.css">
-    <link rel="stylesheet" href="./pages/error/error.css">
     <link rel="stylesheet" href="./components/header/header.css">
     <link rel="stylesheet" href="./components/ui/input/input.css">
     <link rel="stylesheet" href="./components/navbar/navbar.css">
