start to refactoring architecture

--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./features/pages/reg/reg.css">
-    <link rel="stylesheet" href="./features/pages/login/login.css">
-    <link rel="stylesheet" href="./features/pages/chat/chat.css">
-    <link rel="stylesheet" href="./features/pages/error/error.css">
-    <link rel="stylesheet" href="./components/ui/loginReg/bottom.css">
-    <link rel="stylesheet" href="./components/ui/loginReg/top.css">
-    <link rel="stylesheet" href="./components/ui/loginReg/input.css">
-    <link rel="stylesheet" href="./components/header/header.css">
-    <link rel="stylesheet" href="./components/ui/input/input.css">
-    <link rel="stylesheet" href="./components/navbar/navbar.css">
-    <link rel="stylesheet" href="./components/ui/header/header.css">
-    <link rel="stylesheet" href="./components/chatList/chatList.css">
-    <link rel="stylesheet" href="./components/chatCard/chatCard.css">
-    <link rel="stylesheet" href="./components/list/list.css">
-    <link rel="stylesheet" href="./components/chatType/chatType.css">
+    <link rel="stylesheet" href="./features/reg/view/reg.css">
+    <link rel="stylesheet" href="./features/login/view/login.css">
+    <link rel="stylesheet" href="./features/chat/view/chat.css">
+    <link rel="stylesheet" href="./features/error/error.css">
+    <link rel="stylesheet" href="./features/login/view/loginReg/bottom.css">
+    <link rel="stylesheet" href="./features/login/view/loginReg/top.css">
+    <link rel="stylesheet" href="./features/login/view/loginReg/input.css">
+    <link rel="stylesheet" href="./features/chat/view/header/header.css">
+    <link rel="stylesheet" href="./features/chat/view/ui/input/input.css">
+    <link rel="stylesheet" href="./features/chat/view/navbar/navbar.css">
+    <link rel="stylesheet" href="./features/chat/view/ui/header/header.css">
+    <link rel="stylesheet" href="./features/chat/view/chatList/chatList.css">
+    <link rel="stylesheet" href="./features/chat/view/chatCard/chatCard.css">
+    <link rel="stylesheet" href="./features/chat/view/list/list.css">
+    <link rel="stylesheet" href="./features/chat/view/chatType/chatType.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
     <title>Technogram</title>
 </head>
