trying to implemented redux

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./features/reg/view/reg.css">
     <link rel="stylesheet" href="./features/login/view/login.css">
     <link rel="stylesheet" href="./features/chat/view/chat.css">
-    <link rel="stylesheet" href="./features/error/error.css">
+    <link rel="stylesheet" href="./features/error/view/error.css">
     <link rel="stylesheet" href="./features/login/view/loginReg/bottom.css">
     <link rel="stylesheet" href="./features/login/view/loginReg/top.css">
     <link rel="stylesheet" href="./features/login/view/loginReg/input.css">
