--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/logo.png" type="image/png">
+    <link rel="manifest" href="./manifest.json">
     <title>Technogram</title>
 </head>
 <body>
